--- a/sass/modules/_why-choose-area-one.scss
+++ b/sass/modules/_why-choose-area-one.scss
@@ -93,8 +93,11 @@
             }
             .about-info-card{
                 margin: 0;
+                .list-item-wrapper{
+                    text-align: start;
+                }
             }
-            
+
         }
     }
 }
