--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -276,7 +276,7 @@
         }
       }
     }
-    .elementor-container{
+    >.elementor-container{
       @include sm{
         padding: 0 12px;
       }
